--- a/css/reset.css
+++ b/css/reset.css
@@ -4,6 +4,6 @@ body * {
     padding: 0;
     vertical-align: top;
     box-sizing: border-box;
-    word-break: break-all;
+    /* word-break: break-all; */
     font-family: 'Poppins', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
