--- a/css/icons.css
+++ b/css/icons.css
@@ -1,6 +1,13 @@
-.lnr {
+nav .lnr {
     color: var(--dark-color);
     font-size: 1.8rem;
     font-weight: 900;
     cursor: pointer;
+}
+
+section .lnr {
+    color: var(--dark-color);
+    font-size: 2.4rem;
+    line-height: 2.5rem;
+    font-weight: 400;
 }
