--- a/css/facts.css
+++ b/css/facts.css
@@ -2,12 +2,12 @@
     padding: 8rem 0;
 }
 
-.facts .row {
+.facts .flex {
     justify-content: space-around;
     flex-wrap: wrap;
 }
 
-.facts .col-4 {
+.facts .col-3 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,14 +28,14 @@
 }
 
 @media (max-width: 992px) {
-    .facts .col-4 {
+    .facts .col-3 {
         width: 50%;
         margin-bottom: 1.5rem;
     }
 }
 
 @media (max-width: 768px) {
-    .facts .col-4 {
+    .facts .col-3 {
         width: 100%;
         margin-bottom: 2rem;
     }
