Blog posts section #13

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,11 @@
 
 
 /* START of elements */
+::selection {
+    background-color: var(--primary-color);
+    color: var(--white-color);
+}
+
 html {
     font-size: 15px;
 }
