--- a/css/icons.css
+++ b/css/icons.css
@@ -5,7 +5,7 @@ nav .lnr {
     cursor: pointer;
 }
 
-section .lnr {
+.services .lnr {
     color: var(--dark-color);
     font-size: 2.4rem;
     line-height: 2.5rem;
