--- a/css/variables.css
+++ b/css/variables.css
@@ -2,6 +2,7 @@
     --primary-color: #8490ff;
     --secondary-color: #62bdfc;
     --light-color: #f9f9ff;
+    --light-secondary: #eeeeee;
     --light-dark-color: #212529;
     --dark-color: #222222;
     --text-color: #777777;
