--- a/css/variables.css
+++ b/css/variables.css
@@ -5,6 +5,7 @@
     --light-secondary: #eeeeee;
     --light-dark-color: #212529;
     --dark-color: #222222;
+    --dark-secondary: #333333;
     --text-color: #777777;
     --white-color: #ffffff;
 
@@ -14,4 +15,5 @@
     --breakpoint-xl: 1200px; /* desktop */
 
     --header-height: 4.7rem;
+    --gradient: linear-gradient(to right, var(--primary-color), var(--secondary-color));
 }
