--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 }
 
 .bg-gradient-blue {
-    background: linear-gradient(to right, var(--primary-color), var(--secondary-color));
+    background: var(--gradient);
 }
 
 .text-uppercase {
@@ -87,6 +87,7 @@ h2 {
     font-size: 2.4rem;
     line-height: 2.8rem;
     text-transform: capitalize;
+    margin-bottom: 1rem;
 }
 
 h3 {
