--- a/css/variables.css
+++ b/css/variables.css
@@ -8,6 +8,7 @@
     --dark-secondary: #333333;
     --text-color: #777777;
     --white-color: #ffffff;
+    --footer-bg-color: #04091e;
 
     --breakpoint-sm: 576px; /* phone */
     --breakpoint-md: 768px; /* tablet */
