Latest projects section #36

--- a/css/variables.css
+++ b/css/variables.css
@@ -9,6 +9,7 @@
     --dark-secondary: #333333;
     --text-color: #777777;
     --white-color: #ffffff;
+    --arrow-color: #bababa;
 
     --breakpoint-sm: 576px; /* phone */
     --breakpoint-md: 768px; /* tablet */
