--- a/css/header.css
+++ b/css/header.css
@@ -9,6 +9,10 @@ header {
     z-index: 1;
 }
 
+.shadow {
+    box-shadow: -21.213px 21.213px 30px 0 rgba(158,158,158,.3);
+}
+
 nav ul {
     list-style: none;
 }
@@ -146,7 +150,7 @@ nav.mobile-nav a:hover {
 }
 
 .lnr-menu, .lnr-cross {
-    z-index: 99;
+    z-index: 9;
     position: fixed;
     top: 28px;
     right: 18px;
