--- a/css/projects.css
+++ b/css/projects.css
@@ -6,7 +6,11 @@
     padding: 4rem 0;
 }
 
-.project-categories a {
+.project-categories > .col.flex {
+    justify-content: center;
+}
+
+.project-categories .filter {
     color: var(--dark-color);
     font-size: 0.8rem;
     line-height: 1rem;
@@ -16,10 +20,10 @@
     padding-bottom: 0.5rem;
     margin: 0 1rem;
     position: relative;
-
+    cursor: pointer;
 }
 
-.project-categories a::after {
+.project-categories .filter::after {
     background: var(--dark-secondary);
     content: '';
     height: 2px;
@@ -30,11 +34,11 @@
     transition: width .2s ease-out;
 }
 
-.project-categories a:not(.active):hover::after {
+.project-categories .filter:not(.active):hover::after {
     width: 40%;
 }
 
-.project-categories a.active {
+.project-categories .active {
     color: var(--primary-color);
 }
 
@@ -64,8 +68,101 @@
     cursor: pointer;
 }
 
+.projects .row.flex {
+    /* justify-content: flex-start; */
+}
+
+.projects .row.flex .col-4 {
+    display: none;
+    animation: opa 2s ease;
+}
+
+.gallery-zoom {
+    background-color: rgba(0, 0, 0, .7);
+    z-index: 9;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.gallery-zoom .lnr {
+    z-index: 15;
+    font-size: 2rem;
+    color: var(--arrow-color);
+    cursor: pointer;
+    position: fixed;
+    top: 50%;
+    left: 15px;
+}
+
+.gallery-zoom .lnr:hover {
+    color: var(--white-color);
+}
+
+.gallery-zoom > .lnr-arrow-right-circle {
+    left: unset;
+    right: 15px;
+}
+
+.gallery-zoom .lnr-cross-circle {
+    font-size: 1.4rem;
+    left: unset;
+    right: 0;
+    top: unset;
+    position: absolute;
+}
+
+.gallery-zoom > .showing {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 11;
+}
+
+.showing figure {
+    margin-top: 2rem;
+    cursor: pointer;
+}
+
+.showing figcaption {
+    text-align: right;
+    color: var(--arrow-color);
+    font-size: 0.8rem;
+    line-height: 1rem;
+    font-weight: 300;
+    margin-top: 0.3rem;
+}
+
+.gallery-close {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    cursor: zoom-out;
+}
+
 @media (max-width: 576px) {
     .projects .flex {
         justify-content: center;
+    }
+}
+
+@media (min-width: 768px) {
+    .projects .row.flex {
+        justify-content: flex-start;
+    }
+}
+
+@keyframes opa {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
     }
 }
