--- a/css/brands.css
+++ b/css/brands.css
@@ -1,17 +1,11 @@
-.brands {
-    padding-bottom: 5rem;
+.brands .flex {
+    flex-wrap: nowrap;
 }
 
 .brands .row {
-    padding: 1rem;
-    max-width: 100%;
-    /* height: 8rem; */
-    /* overflow: hidden; */
-    /* border: 1px solid red; */
-}
-
-.brands .row .col {
-    max-width: 20%;
+    text-align: center;
+    width: 100%;
+    overflow: hidden;
 }
 
 .brands .row > .col img {
@@ -22,7 +16,13 @@
     opacity: 1;
 }
 
-@media (max-width: 992px) {
+.brands .row > .col {
+    /* background: red; */
+    flex-grow: 0;
+    flex-shrink: 0;
+}
+
+/* @media (max-width: 992px) {
     .brands .row .col {
         max-width: 25%;
     }
@@ -50,4 +50,4 @@
     .brands .row .col:nth-child(n+3) {
         display: none;
     }
-}
+} */
