--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,7 @@ header {
 
 .shadow {
     box-shadow: -21.213px 21.213px 30px 0 rgba(158,158,158,.3);
+    transition: box-shadow 1s;
 }
 
 nav ul {
