--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,3 @@
-.projects {
-    margin-bottom: 5rem;
-}
-
 .project-categories {
     padding: 4rem 0;
 }
@@ -57,6 +53,10 @@
     position: relative;
 }
 
+.projects .overlay {
+    opacity: 0;
+}
+
 .projects .row > .col-4 > .project-photo:hover .overlay {
     background: url(../img/preview.png) no-repeat center, var(--gradient);
     opacity: .8;
@@ -66,6 +66,7 @@
     bottom: 0;
     right: 0;
     cursor: pointer;
+    transition: opacity .5s;
 }
 
 .projects .row.flex {
